--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   text-decoration: none;
   list-style: none;
 }
@@ -11,13 +10,11 @@ html {
   scroll-behavior: smooth;
   font-size: 62.5%;
 }
-
 @media (max-width: 767px) {
   html {
     font-size: 55%;
   }
 }
-
 @media (max-width: 480px) {
   html {
     font-size: 50%;
@@ -33,33 +30,23 @@ body {
 }
 
 .flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .flex-center {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
   padding: 0 10rem;
 }
-
 @media (max-width: 767px) {
   .container {
     padding: 0 5rem;
   }
 }
-
 @media (max-width: 767px) {
   .container {
     padding: 0 2rem;
@@ -73,7 +60,6 @@ img {
 .section-padding {
   margin: 8rem 0;
 }
-
 @media (max-width: 767px) {
   .section-padding {
     margin: 4rem 0;
@@ -93,11 +79,9 @@ img {
   text-transform: uppercase;
   margin-top: 2rem;
   border-radius: 1rem;
-  -webkit-transition: all 1s ease;
   transition: all 1s ease;
   cursor: pointer;
 }
-
 .theme-btn:hover {
   background-color: red;
   color: #fff;
@@ -131,4 +115,18 @@ p {
   font-size: 1.8rem;
   font-weight: 300;
 }
-/*# sourceMappingURL=index.css.map */
+
+.navbar {
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+}
+.navbar .nav-container {
+  justify-content: space-between;
+  padding: 2rem 10rem;
+  background: #000;
+}
+.navbar .nav-container .logo img, .navbar .nav-container menu-icon img {
+  max-width: 6rem;
+  cursor: pointer;
+}/*# sourceMappingURL=index.css.map */
