--- a/styles/index.css
+++ b/styles/index.css
@@ -126,7 +126,8 @@ p {
   padding: 2rem 10rem;
   background: #000;
 }
-.navbar .nav-container .logo img, .navbar .nav-container menu-icon img {
+.navbar .nav-container .logo img,
+.navbar .nav-container .menu-icon img {
   max-width: 6rem;
   cursor: pointer;
 }
@@ -136,12 +137,12 @@ p {
   position: fixed;
   height: 100%;
   background-color: #000;
-  left: 100vw;
+  left: -100vw;
   transition: all 1s ease;
 }
 .menu-links .close-icon {
   position: absolute;
-  right: 6rem;
+  right: 7rem;
   top: 3rem;
   cursor: pointer;
 }
@@ -158,9 +159,97 @@ p {
   color: #fff;
   font-weight: 700;
   font-size: 3rem;
+  text-transform: uppercase;
+  transition: all 0.5s ease;
+}
+.menu-links .menu-link-cont li a:hover {
+  color: #ffd71b;
 }
 
 .menu-links.active {
   left: 0;
   z-index: 99;
+}
+
+.hero-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url("../images/background.jpg") no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.hero-section__wrapper {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.hero-section__wrapper h1 {
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  background: linear-gradient(90deg, red 0%, #fff 100%, red);
+  letter-spacing: 5px;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 5s linear infinite;
+  position: relative;
+}
+.hero-section__wrapper p {
+  font-size: 2rem;
+  font-weight: 300;
+  color: #fff;
+  margin: 2rem 0;
+}
+
+@keyframes animate {
+  0% {
+    background-position-x: -500%;
+  }
+  100% {
+    background-position-x: 500%;
+  }
+}
+.why-us {
+  width: 100%;
+  height: auto;
+}
+.why-us__wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.why-us__wrapper img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  max-width: 45rem;
+}
+.why-us__content {
+  width: 60%;
+}
+.why-us__content h3 {
+  color: #ffd71b;
+  text-transform: uppercase;
+}
+.why-us__content h2 {
+  text-transform: uppercase;
+  padding: 1rem 0;
+  font-weight: 700;
+}
+.why-us__image {
+  width: 40%;
+  text-align: right;
+}
+.why-us__image img {
+  border-radius: 1.5rem;
 }/*# sourceMappingURL=index.css.map */
