--- a/styles/index.scss
+++ b/styles/index.scss
@@ -132,7 +132,8 @@ p {
     padding: 2rem 10rem;
     background: $black;
 
-    .logo, menu-icon {
+    .logo, 
+    .menu-icon {
       
       img {
         max-width: 6rem;
@@ -147,12 +148,12 @@ p {
   position: fixed;
   height: 100%;
   background-color: $black;
-  left: 100vw;
+  left: -100vw;
   transition: all 1s ease;
 
   .close-icon {
     position: absolute;
-    right: 6rem;
+    right: 7rem;
     top: 3rem;
     cursor: pointer;
   }
@@ -170,6 +171,11 @@ p {
         color: $white;
         font-weight: 700;
         font-size: 3rem;
+        text-transform: uppercase;
+        transition: all 0.5s ease;
+        &:hover {
+          color: $yellow;
+        }
       }
     }
   }
@@ -178,4 +184,101 @@ p {
 .menu-links.active {
   left: 0;
   z-index: 99;
+}
+
+// hero section
+
+.hero-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  background: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.8)), 
+  url("../images/background.jpg") no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    h1 {
+      font-weight: 700;
+      text-transform: uppercase;
+      text-align: center;
+      background: linear-gradient(90deg, red 0%, #fff 100%, red);
+      letter-spacing: 5px;
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-repeat: no-repeat;
+      background-size: 80%;
+      animation: animate 5s linear infinite;
+      position: relative;
+    }
+
+    p{
+      font-size: 2rem;
+      font-weight: 300;
+      color: $white;
+      margin: 2rem 0;
+    }
+  }
+}
+
+@keyframes animate {
+  0% {
+    background-position-x: -500%;
+  }
+  100% {
+    background-position-x: 500%;
+  }
+}
+
+.why-us {
+  width: 100%;
+  height: auto;
+
+  &__wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      max-width: 45rem;
+    }
+  }
+
+  &__content {
+    width: 60%;
+
+    h3 {
+      color: $yellow;
+      text-transform: uppercase;
+    }
+
+    h2 {
+      text-transform: uppercase;
+      padding: 1rem 0;
+      font-weight: 700;
+    }
+
+  }
+
+  &__image {
+    width: 40%;
+    text-align: right;
+
+    img {
+      border-radius: 1.5rem;
+    }
+  }
+
 }
