--- a/styles/index.scss
+++ b/styles/index.scss
@@ -280,5 +280,97 @@ p {
       border-radius: 1.5rem;
     }
   }
+}
 
+// Explore section
+
+.explore {
+  width: 100%;
+  position: relative;
+  background: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.8)),
+    url("../images/bg-fixed.jpg") no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 5rem 0;
+
+  &__wrapper {
+    flex-direction: column;
+
+    .card-container {
+      display: flex;
+      justify-content: space-between;
+
+      .cards {
+        padding: 4rem 2rem;
+        background: $grey;
+        margin: 2rem;
+        transition: all 1s ease;
+
+        img {
+          max-width: 5rem;
+        }
+  
+        &:hover {
+          transform: translate(-10px);
+          background: rgb(red, 0.5);
+        }
+      }
+    }
+  }
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-between;
+
+  .cards {
+    padding: 4rem 2rem;
+    background: $grey;
+    margin: 2rem;
+    transition: all 1s ease;
+
+    img {
+      max-width: 5rem;
+    }
+
+    &:hover {
+      transform: translate(-10px);
+      background: rgb(red, 0.5);
+    }
+  }
+}
+
+.clients {
+  width: 100%;
+  background-color: $grey;
+  padding: 6rem 0;
+
+  &__wrapper {
+    flex-direction: column;
+  }
+
+  .cards {
+    text-align: center;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.8)
+    ),
+    url("../images/bg-restaurant-portrait.jpg") no-repeat center;
+    background-size: cover;
+
+    p {
+      font-size: $fs-small;
+      font-style: italic;
+      line-height: 2;
+    }
+  
+    h3 {
+      padding-top: 3rem;
+    }
+
+    &:hover {
+      background: rgba($color: $black, $alpha: 1);
+    }
+  }
 }
