--- a/styles/index.css
+++ b/styles/index.css
@@ -324,4 +324,121 @@ p {
 }
 .clients .cards:hover {
   background: black;
+}
+
+.gallery {
+  width: 100%;
+}
+.gallery__wrapper {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 30rem 30rem 30rem;
+  grid-template-areas: "i1 i1 i2 i3" "i1 i1 i4 i4" "i5 i6 i4 i4";
+}
+.gallery__wrapper .i1 {
+  grid-area: i1;
+  overflow: hidden;
+}
+.gallery__wrapper .i2 {
+  grid-area: i2;
+  overflow: hidden;
+}
+.gallery__wrapper .i3 {
+  grid-area: i3;
+  overflow: hidden;
+}
+.gallery__wrapper .i4 {
+  grid-area: i4;
+  overflow: hidden;
+}
+.gallery__wrapper .i5 {
+  grid-area: i5;
+  overflow: hidden;
+}
+.gallery__wrapper .i6 {
+  grid-area: i6;
+  overflow: hidden;
+}
+.gallery__wrapper .i7 {
+  grid-area: i7;
+  overflow: hidden;
+}
+.gallery__wrapper img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  overflow: hidden;
+  transition: all 1s ease;
+}
+.gallery__wrapper img:hover {
+  transform: scale(1.1);
+}
+
+.contact-section {
+  background: url("../images/map.png") no-repeat center;
+  height: 100vh;
+  background-size: cover;
+  position: relative;
+  margin-top: 30rem;
+}
+.contact-section__wrapper {
+  padding: 8rem;
+  background-color: #222;
+  width: 40%;
+  margin: auto;
+  position: absolute;
+  top: -15%;
+  left: 50%;
+  transform: translate(-50%);
+  flex-direction: column;
+}
+
+.getEmail {
+  margin-bottom: 2rem;
+  width: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url("../images/bg-footer.jpg") no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.getEmail__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 5rem 0;
+}
+.getEmail__wrapper h2 {
+  font-size: 2.6rem;
+  font-weight: 400;
+}
+.getEmail__wrapper input {
+  padding: 2rem;
+  background-color: #000;
+  width: 100%;
+  border: 1px solid #fff;
+  border-radius: 1rem;
+}
+.getEmail__wrapper input::-moz-placeholder {
+  font-size: 2.2rem;
+}
+.getEmail__wrapper input::placeholder {
+  font-size: 2.2rem;
+}
+.getEmail__wrapper button {
+  width: 100%;
+  max-width: 40rem;
+  font-size: 2.2rem;
+  background-color: #000;
+  color: #fff;
+  border: 1px solid #fff;
+  font-weight: 400;
+}
+.getEmail .logo {
+  max-width: 10rem;
 }/*# sourceMappingURL=index.css.map */
