--- a/styles/index.scss
+++ b/styles/index.scss
@@ -374,3 +374,129 @@ p {
     }
   }
 }
+
+.gallery {
+  width: 100%;
+
+  &__wrapper {
+    .i1 {
+      grid-area: i1;
+      overflow: hidden;
+    }
+    .i2 {
+      grid-area: i2;
+      overflow: hidden;
+    }
+    .i3 {
+      grid-area: i3;
+      overflow: hidden;
+    }
+    .i4 {
+      grid-area: i4;
+      overflow: hidden;
+    }
+    .i5 {
+      grid-area: i5;
+      overflow: hidden;
+    }
+    .i6 {
+      grid-area: i6;
+      overflow: hidden;
+    }
+    .i7 {
+      grid-area: i7;
+      overflow: hidden;
+    }
+
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 30rem 30rem 30rem;
+    grid-template-areas:
+      "i1 i1 i2 i3"
+      "i1 i1 i4 i4"
+      "i5 i6 i4 i4";
+    
+
+    img {
+      object-fit: cover;
+      object-position: center;
+      width: 100%;
+      height: 100%;
+      border-radius: 1rem;
+      overflow: hidden;
+      transition: all 1s ease;
+    
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+}
+
+.contact-section {
+  background: url("../images/map.png") no-repeat center;
+  height: 100vh;
+  background-size: cover;
+  position: relative;
+  margin-top: 30rem;
+
+  &__wrapper {
+    padding: 8rem;
+    background-color: $grey;
+    width: 40%;
+    margin: auto;
+    position: absolute;
+    top: -15%;
+    left: 50%;
+    transform: translate(-50%);
+    flex-direction: column;
+  }
+}
+
+.getEmail {
+  margin-bottom: 2rem;
+  width: 100%;
+  background: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.8)),
+    url("../images/bg-footer.jpg") no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 5rem 0;
+
+    h2 {
+      font-size: $fs-medium;
+      font-weight: 400;
+    }
+
+    input {
+      padding: 2rem;
+      background-color: $black;
+      width: 100%;
+      border: 1px solid $white;
+      border-radius: 1rem;
+      &::placeholder {
+        font-size: $fs-small;
+      }
+    }
+
+    button {
+      width: 100%;
+      max-width: 40rem;
+      font-size: $fs-small;
+      background-color: $black;
+      color: $white;
+      border: 1px solid $white;
+      font-weight: 400;
+    }
+  }
+  .logo {
+   max-width: 10rem;
+  }
+}
