--- a/styles/index.scss
+++ b/styles/index.scss
@@ -258,6 +258,7 @@ p {
 
   &__content {
     width: 60%;
+    padding: 1rem;
 
     h3 {
       color: $yellow;
@@ -439,12 +440,12 @@ p {
   height: 100vh;
   background-size: cover;
   position: relative;
-  margin-top: 30rem;
+  margin-top: 20rem;
 
   &__wrapper {
-    padding: 8rem;
+    padding: 3rem;
     background-color: $grey;
-    width: 40%;
+    width: 90%;
     margin: auto;
     position: absolute;
     top: -15%;
@@ -498,5 +499,168 @@ p {
   }
   .logo {
    max-width: 10rem;
+  }
+}
+
+footer {
+  padding: 3rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  .footer-menu-links{
+    li {
+      padding: 1rem;
+      text-align: center;
+
+      a {
+        color: $white;
+        font-size: $fs-small;
+        text-transform: uppercase;
+      }
+    }
+  }
+
+  .social-icons {
+    margin: 2rem 0;
+
+    img {
+      max-width: 4rem;
+      height: auto;
+      border-radius: 50%;
+      padding: 5px;
+      transition: all 1s ease;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  text-transform: uppercase;
+}
+
+// media queries
+
+@media (max-width: 767px) {
+  .hero-section {
+    height: auto;
+
+    &__wrapper {
+      padding: 15rem 0 10rem 0;
+      h1 {
+        font-size: $fs-large;
+      }
+    }
+  }
+
+  .why-us {
+    &__wrapper {
+      flex-direction: column;
+    }
+
+    &__content,
+    &__image {
+      width: 100%;
+      text-align: center;
+      margin-bottom: 2rem;
+
+      img {
+        max-width: 100%;
+      }
+    }
+  }
+
+  .explore {
+    &__wrapper {
+      flex-direction: column;
+    }
+  }
+
+  .gallery {
+    &__wrapper {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 10rem 10rem 15rem 10rem 10rem;
+      grid-template-areas:
+        "i1 i1"
+        "i1 i1"
+        "i2 i3"
+        "i4 i4"
+        "i5 i6"
+        "i7 i7";
+    }
+  }
+
+  .contact-section {
+    &__wrapper {
+      padding: 3rem;
+      width: 90%;
+      top: -10%;
+    }
+  }
+
+  .card-container {
+    flex-wrap: wrap;
+    text-align: center;
+  }
+
+  .navbar {
+    .nav-container {
+      padding: 3rem;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .hero-section {
+    &__wrapper {
+      h1 {
+        font-size: $fs-medium;
+      }
+    }
+  }
+
+  .why-us {
+    &__wrapper {
+      flex-direction: column;
+    }
+    &__image {
+      width: 100%;
+      text-align: center;
+    }
+  }
+
+  .explore {
+    &__wrapper {
+      flex-direction: column;
+    }
+  }
+
+  .gallery {
+    &__wrapper {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 30rem 30rem 30rem 30rem 30rem 30rem;
+      grid-template-areas:
+        "i1 i1"
+        "i2 i3"
+        "i4 i4"
+        "i5 i6"
+        "i7 i7";
+    }
+  }
+
+  .contact-section {
+    &__wrapper {
+      padding: 3rem;
+      width: 100%;
+      top: -10%;
+    }
+  }
+
+  .card-container {
+    flex-wrap: wrap;
+    text-align: center;
   }
 }
